--- a/Example/Renders/DeferredShadingPBRTest.html
+++ b/Example/Renders/DeferredShadingPBRTest.html
@@ -100,6 +100,7 @@
             let gui = new dat.GUI();
             var settings = {
                 renderTechnology: 'MultiPassDeferred',
+                globalGiProbe: true,
                 directionalLight: true,
                 pointLights: true,
                 pointLightAnim: true
@@ -111,6 +112,14 @@
                         node.getMaterial().selectTechnology(value == 'Default' ? "" : value);
                     }
                 });
+            });
+            gui.add(settings, 'globalGiProbe').onChange(function(value){
+                if(value){
+                    giProbe.enable();
+                }
+                else{
+                    giProbe.disable();
+                }
             });
             gui.add(settings, 'directionalLight').onChange(swi=>{
                 if(swi){
@@ -177,7 +186,7 @@
         rootNode.addChildren(dirLight);
 
         // 全局GIProbe
-        let giProbe = new GIProbe(scene, {id:'giProbe'});
+        var giProbe = new GIProbe(scene, {id:'giProbe'});
         giProbe.setRadius(20);
         giProbe.setPositionFromXYZ(0, 5, 0);
         let envCapture = ProbeTools.bakeGIProbe(scene, giProbe, {resolute:128});
