--- a/Example/Renders/TileBasedDeferredShadingTest.html
+++ b/Example/Renders/TileBasedDeferredShadingTest.html
@@ -16,7 +16,7 @@
     import Material from "../../src/Core/Material/Material.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
-    import Render from "../../src/Core/Render/Render.js";
+    import Box from "../../src/Core/Node/Shape/Box.js";
     import Vec4Vars from "../../src/Core/WebGL/Vars/Vec4Vars.js";
     import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
     import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
