--- a/Example/Renders/TileBasedDeferredShadingTest.html
+++ b/Example/Renders/TileBasedDeferredShadingTest.html
@@ -18,6 +18,7 @@
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
     import Box from "../../src/Core/Node/Shape/Box.js";
     import Vec4Vars from "../../src/Core/WebGL/Vars/Vec4Vars.js";
+    import Render from "../../src/Core/Render/Render.js";
     import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
     import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
     import OBJLoader from "../../src/Supp/OBJLoader.js";
