--- a/Example/Supps/GLTFAnimation2.html
+++ b/Example/Supps/GLTFAnimation2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GLTFLoaderTest2</title>
+    <title>GLTFAnimation2</title>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;">
@@ -13,32 +13,39 @@
     import RenderEngine from "../../src/Core/RenderEngine.js";
     import Node from "../../src/Core/Node/Node.js";
     import Vector3 from "../../src/Core/Math3d/Vector3.js";
+    import FirstPersonController from "../../src/Core/InputControl/FirstPersonController.js";
     import DirectionalLight from "../../src/Core/Light/DirectionalLight.js";
     import Stats from "../stats.min.js";
     import MaterialDef from "../../src/Core/Material/MaterialDef.js";
+    import Material from "../../src/Core/Material/Material.js";
     import Camera from "../../src/Core/Scene/Camera.js";
+    import MeshFactor from "../../src/Core/Util/MeshFactor.js";
+    import Geometry from "../../src/Core/Node/Geometry.js";
     import GLTFLoader from "../../src/Supp/GLTFLoader.js";
     import RadianceLoader from "../../src/Supp/RadianceLoader.js";
-    import SkyBox from "../../src/Core/Node/Sky/SkyBox.js";
-    import Vector4 from "../../src/Core/Math3d/Vector4.js";
-    import Texture2DVars from "../../src/Core/WebGL/Vars/Texture2DVars.js";
-    import BoolVars from "../../src/Core/WebGL/Vars/BoolVars.js";
     import GIProbe from "../../src/Core/Light/GIProbe.js";
     import ProbeTools from "../../src/Core/Util/ProbeTools.js";
+    import Texture2DVars from "../../src/Core/WebGL/Vars/Texture2DVars.js";
+    import Vector4 from "../../src/Core/Math3d/Vector4.js";
+    import BoolVars from "../../src/Core/WebGL/Vars/BoolVars.js";
+    import SkyBox from "../../src/Core/Node/Sky/SkyBox.js";
     import SceneBrowsingController from "../../src/Core/InputControl/SceneBrowsingController.js";
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     let mainCamera = scene.getComponent('mainCamera');
-    mainCamera.lookAt(new Vector3(10.00694701577273,4.752059754747693,-0.8094167189698362), new Vector3(9.020200568330681,4.844430342194254,-0.6760033649333097), new Vector3(0, 1, 0));
+    mainCamera.lookAt(new Vector3(2, 2, 2), new Vector3(0, 1, 0), new Vector3(0, 1, 0));
 
     let testCamera = new Camera(scene, {id:'testCamera'});
-    testCamera.lookAt(new Vector3(0, 0, 5), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
+    testCamera.lookAt(new Vector3(5, 5, 5), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
     let colorDef = MaterialDef.load("../../src/Core/Assets/MaterialDef/ColorDef");
+    let colorMat = new Material(scene, {id:'colorWireFrustum', materialDef:colorDef});
+
     let rootNode = new Node(scene, {id:'rootNode'});
 
 
     // 环境纹理加载完再开始创建创建
     let radianceLoader = new RadianceLoader();
-    radianceLoader.loadHDR('./../Assets/Textures/hdr/newport_loft.hdr', imageData=>{
+    radianceLoader.loadHDR('./../Assets/Textures/hdr/env1.hdr', imageData=>{
+
         // 创建一个sky
         let sky = new SkyBox(scene, {id:'sky'});
         // 使用cubeMap作为天空盒材质
@@ -51,30 +58,34 @@
         sky.getMaterial().setParam('envMap', envMap);
         sky.getMaterial().setParam('useEnvMap', new BoolVars().valueOf(true));
         sky.getMaterial().setParam('useHDR', new BoolVars().valueOf(true));
-
         scene.setSky(sky);
+
+
 
         let gltfLoader = new GLTFLoader();
         gltfLoader.setAssetsPath("../../src/Core/Assets/MaterialDef/");
-        gltfLoader.load(scene, './../Assets/Models/GLTF/AdamHead/adamHead.gltf', modelNode=>{
+        gltfLoader.load(scene, './../Assets/Models/GLTF/StarWars/scene.gltf', modelNode=>{
             rootNode.addChildren(modelNode);
-            let sceneControl = new SceneBrowsingController(scene, {id:'sceneControl'});
+            let sceneControl = new SceneBrowsingController(scene, {id:'control'});
             sceneControl.lookScene(modelNode);
-            sceneControl.setTargetDistance(4);
-        }, {batch:false});
+            // let animationProcessors = modelNode.getComponentAtTypes('AnimationProcessor');
+            // animationProcessors[0].getAnimationActionAtIndex(0).play();
+            let giProbe = new GIProbe(scene, {id:'giProbe'});
+            giProbe.setRadius(20);
+            giProbe.setPositionFromXYZ(0, 5, 0);
+            let envCapture = ProbeTools.bakeGIProbe(scene, giProbe, {resolute:128});
+            // 某些动画轨迹进行了缩放动画,而动画影响顶点,所以会出现包围盒不对应动画下的模型标准,所以这里可以对模型关闭剔除(但一般建模人员不会这么处理,除非是新手)
+        });
 
-        // let dirLight = new DirectionalLight(scene, {id:'dirLight'});
-        // dirLight.setDirectionXYZ(-1, -1, -1);
-        // dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
-        // rootNode.addChildren(dirLight);
-
-        let giProbe = new GIProbe(scene, {id:'giProbe'});
-        giProbe.setRadius(20);
-        giProbe.setPositionFromXYZ(0, 0, 0);
-        let envCapture = ProbeTools.bakeGIProbe(scene, giProbe, {resolute:256});
     });
 
 
+
+
+    let dirLight = new DirectionalLight(scene, {id:'dirLight'});
+    dirLight.setDirectionXYZ(-1, -1, 1);
+    dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
+    rootNode.addChildren(dirLight);
 
     let renderEngine = new RenderEngine();
     scene.addSceneNode(rootNode);
