--- a/Example/PostFilters/GrayFilterTest.html
+++ b/Example/PostFilters/GrayFilterTest.html
@@ -14,15 +14,15 @@
             width: 50px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="../Assets/Htmls/Css/Base.css"/>
-    <script src="../Assets/Htmls/Js/Infos.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="../Assets/Htmls/Css/Base.css"/>-->
+    <!--<script src="../Assets/Htmls/Js/Infos.js"></script>-->
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
     <canvas id="canvas" tabindex="0" width="400" height="300" style="border: none;margin: 0px;padding: 0px;"></canvas>
 </div>
 <script type="module">
-    addInfos('GrayFilter', '该案例演示了基础的灰度过滤器,确保页面获取焦点(鼠标点击该页面)后,按下键盘J键关闭灰度过滤器,按下键盘I键开启灰度过滤器!');
+    // addInfos('GrayFilter', '该案例演示了基础的灰度过滤器,确保页面获取焦点(鼠标点击该页面)后,按下键盘J键关闭灰度过滤器,按下键盘I键开启灰度过滤器!');
 
     import Scene from "../../src/Core/Scene/Scene.js";
     import RenderEngine from "../../src/Core/RenderEngine.js";
